--- a/src/login.html
+++ b/src/login.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <nav>
-        <a href="#Home">Home</a>
-        <a href="#Products">Products</a>
-        <a href="#Contact">Contact</a>
-        <a href="#Login">Login</a>
-        <a href="#Register">Register</a>
+        <ul>
+            <a href="home.html">Home</a>
+            <a href="#Products">Products</a>
+            <a href="#Contact">Contact</a>
+            <a href="login.html">Login</a>
+            <a href="register.html">Register</a>
+        </ul>
     </nav>
 
     <form action="" method="POST">
