--- a/src/home.html
+++ b/src/home.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
+        <h2>Botanictails</h2>
         <ul>
             <a href="home.html">Home</a>
             <a href="#Products">Products</a>
             <a href="#Contact">Contact</a>
             <a href="login.html">Login</a>
             <a href="register.html">Register</a>
+            <a href="checkout.html">Checkout</a>
         </ul>
     </nav>
     
