--- a/src/register.html
+++ b/src/register.html
@@ -17,6 +17,9 @@
             <a href="login.html">Login</a>
             <a href="register.html">Register</a>
             <a href="checkout.html">Checkout</a>
+            <a href="checkout.html">
+                <img src="images/cart.png"
+            </a>
         </ul>
     </nav>
 
